quick fix for post content overflow

--- a/client/forum/blocks/posts_list/posts_list.styl
+++ b/client/forum/blocks/posts_list/posts_list.styl
@@ -70,6 +70,7 @@
 .forum-post__content
   font-family sansWideFontFamily
   margin-right 10px
+  overflow auto
 
 .forum-post__message
   overflow hidden
